--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "date-fns": "^3.6.0",
     "nuxt": "^3.11.2",
-    "radix-vue": "^1.7.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "lodash": "^4.17.21",
+    "nuxt-primevue": "^3.0.0"
   }
 }
