--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ dnspython==1.16.0
 fastapi==0.110.1
 fastexcel==0.10.4
 h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
 isort==5.13.2
@@ -23,12 +25,14 @@ packaging==24.0
 platformdirs==4.2.0
 pluggy==1.4.0
 pyarrow==15.0.2
-pydantic==2.6.4
-pydantic_core==2.16.3
+pydantic==2.7.4
+pydantic-settings==2.3.3
+pydantic_core==2.18.4
 pylint==3.1.0
-pymongo==4.5.0
+pymongo==3.11.0
 PySocks==1.7.1
 pytest==8.1.1
+pytest-dotenv==0.5.2
 python-dotenv==1.0.1
 requests==2.31.0
 sniffio==1.3.1
