--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "braces": "3.0.3",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "nuxt": "^3.11.2",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "ws": "8.17.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
